--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,10 +1,14 @@
 <!-- Recently Added section starts -->
-<section class="text-center bg-grey row">
-	<h2 class="theme-color">RECENTLY ADDED</h2>
-	<div ng-repeat="(key, value) in vm.recentlyAddedData">
-		{{key}}
+<section class="bg-grey row">
+	<h2 class="text-center theme-color">RECENTLY ADDED</h2>
+	<div ng-repeat="(key, value) in vm.recentlyAddedData" class="col-xs-10 col-sm-5 col-xs-offset-1 recently-added-section">
+		<div class="recently-added-category-name col-xs-12">
+			{{key}}
+		</div>
 		<ul class="recently-added-list">
-			<li ng-repeat="data in value"><a href='javascript:void(0)' ng-click="vm.fetchDetails(data.name, data.category)">{{data.name}}</a><br>{{data.locality}}, {{data.city}}</li>
+			<li ng-repeat="data in value" class="col-xs-12">
+				<a href='javascript:void(0)' ng-click="vm.fetchDetails(data.name, data.category)">{{data.name}}, {{data.locality}}, {{data.city}}</a>
+			</li>
 		</ul>
 	</div>
 </section>
@@ -84,29 +88,27 @@
 </section>
 <!-- Portfolio section starts -->
 <section class='portfolioSlider row text-center'>
-	<div class="h2 theme-color">OUR PORTFOLIO</div>
+	<div class="h2 theme-color">
+		OUR PORTFOLIO
+	</div>
 	<!-- Slider main container -->
-<div class="swiper-container">
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-        <!-- Slides -->
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/1)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/2)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/3)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/4)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/5)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/6)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/7)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/8)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/9)"></a>
-            <a class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/10)"></a>
-    </div>
-    
-    <!-- If we need navigation buttons -->
-    <a href="javascript:void(0)" class="swiper-button-prev"></a>
-    <a href="javascript:void(0)" class="swiper-button-next"></a>
-    
+	<div class="swiper-container">
+		<!-- Additional required wrapper -->
+		<div class="swiper-wrapper">
+			<!-- Slides -->
+			<div class="swiper-slide" data-ng-repeat="(key, value) in vm.portfolioImages" style="background-image:url({{value.coverImage}})" on-last-repeat-element on-finish-callback="vm.applyLibrariesOnPortfolio()">
+				<a data-ng-repeat="(childKey, childValue) in value" href="{{childValue}}" class="{{key}}" title="{{childKey}}" data-gallery="{{key}}">
+			<button data-ng-if="$index == 0" class="btn default-theme-btn view-event-btn">
+				Full Event
+			</button> </a> 
+			</div>	
+									
+		</div>
 
-</div>
-	
+		<!-- If we need navigation buttons -->
+		<a href="javascript:void(0)" class="swiper-button-prev"></a>
+		<a href="javascript:void(0)" class="swiper-button-next"></a>
+
+	</div>
+
 </section>
