Cosmetic and REST API hit changes

--- a/app/views/data/filters.html
+++ b/app/views/data/filters.html
@@ -56,7 +56,7 @@
 			</div>
 	</div>
 
-	<hr>
+	<hr ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0">
 	<h4 ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0" class='theme-color'>MORE FILTERS</h4>
 
 	<div ng-if="vm.filters.carType.length > 0">
