--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -69,7 +69,7 @@
 							Amenities &amp; Services
 						</div>
 					</div>
-					<div class="pamphlet-body" data-ng-show="vm.selectedCategory == 'VENUE'">
+					<div class="pamphlet-body">
 						<ul class="nav nav-tabs nav-justified">
 							<li ng-repeat ="tab in vm.tabName" class="lp-tabs" ng-class="{'active': $index==0, 'single-tab': vm.tabName.length==1}">
 								<a data-target="#tab{{$index}}" data-toggle="tab" href="javascript:void(0)">{{tab}}</a>
