--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -1,54 +1,95 @@
 <div class="about-us-page">
 	<div id="coverPage" class="generic-cover text-center about-us-cover">
-		
-		<div class="cover-text vertical-center main-heading">BRINGING SMILES ON FACES</div>
-	</div>
-<!-- About LE PARTYCIOUS section starts -->
-<section class="container text-center">
-	<h2 class="theme-color">ABOUT LE PARTYCIOUS</h2>
-	<p class="text-left">
-		Le Partycious was established in October, 2015 with a single motto of
-		bringing smiles on the faces of people. At Le Partycious, we are focused
-		on providing Hospitality and Event services with the highest level of customer
-		satisfaction - we will do everything we can to meet your expectations.
-		With a variety of offerings to choose from, we're sure you will be happy working with us.
-	</p>
-</section>
-<!-- OUR TEAM section starts -->
-<section class="container text-center">
-	<h2 class="theme-color">OUR TEAM</h2>
-	<div class="row team-members">
-		<div class="col-xs-4 col-sm-3 col-md-2 team-image">
-			<img src="" alt="image"/>
-		</div>
-		<div class="col-xs-8 col-sm-6">
-			<p class="team-name text-left">LOKPRIYA KALRA</p>
-			<p class="team-designation text-left">Co-Founder</p>
-			<p class="team-description text-left text-justify">Coming all the way from Bikaner, Lokpriya has skills for managing an event efficiently
-				and successfully. Being an engineer, his tech brain helps to bring innovation in event management, hence redefining the term in a positive way. </p>
+
+		<div class="cover-text vertical-center main-heading">
+			BRINGING SMILES ON FACES
 		</div>
 	</div>
-	<div class="row team-members">
-		<div class="col-xs-4 col-sm-3 col-md-2 col-sm-offset-3 col-md-offset-4 team-image">
-			<img src="" alt="image"/>
+	<!-- About LE PARTYCIOUS section starts -->
+	<section class="container text-center">
+		<h2 class="theme-color">ABOUT LE PARTYCIOUS</h2>
+		<p class="text-left">
+			Do you want to organize a surprise party on your anniversary but unable to do so because of your busy office hours?<br/>
+			Do you wish to plan a birthday party for your kid but got confused whether it will lie in your budget or not?<br/>
+			Want to enjoy your son's marriage without having any botheration to handle the event/guests?<br/>
+		</p>
+		<p class="text-left">
+			Planning for a party? Then you have come to the right place.
+		</p>
+		<p class="text-left">
+			Tell us the way you want your party to be like and Le Partycious will provide you with apt vendors that matches your
+
+			requirements and budget.
+			
+			
+		</p>
+		<p class="text-left bolder">
+			In short, just pick us for managing your event and Le Partycious will make it a memorable one for you.
+		</p>
+		<p class="text-left">
+			Established in October 2015, Le Partycious is an online platform for organising events.Which provides you with the relevant
+
+			information regarding different venues,caterers,photographers and decorators. Its all about bringing all the vendors under
+
+			one roof so that they coordinate well and work towards a success story of  an event.
+			So precisely we are here to make your work convenient and hassel free by helping you choose from the diversified options
+
+			available, that fits in your pocket.
+		</p>
+	</section>
+	<!-- OUR TEAM section starts -->
+	<section class="container text-center">
+		<h2 class="theme-color">OUR TEAM</h2>
+		<div class="row team-members">
+			<div class="col-xs-4 col-sm-3 col-md-2 team-image">
+				<img src="" alt="image"/>
+			</div>
+			<div class="col-xs-8 col-sm-6">
+				<p class="team-name text-left">
+					LOKPRIYA KALRA
+				</p>
+				<p class="team-designation text-left">
+					Co-Founder
+				</p>
+				<p class="team-description text-left text-justify">
+					He is a guy who is passionate about innovation and his diverse event management skills makes him a great planner.
+					Coming from the streets of Bikaner, he is an engineer-cum-eventManager by education and also a  deep thinker in every aspect of life.
+					He is our Event Manager mainly concerned with marketing and business development for Le Partycious.	</p>
+			</div>
 		</div>
-		<div class="col-xs-8 col-sm-6">
-			<p class="team-name text-left">LOKPRIYA KALRA</p>
-			<p class="team-designation text-left">Co-Founder</p>
-			<p class="team-description text-left text-justify">Coming all the way from Bikaner, Lokpriya has skills for managing an event efficiently
-				and successfully. Being an engineer, his tech brain helps to bring innovation in event management, hence redefining the term in a positive way. </p>
+		<div class="row team-members">
+			<div class="col-xs-4 col-sm-3 col-md-2 col-sm-offset-3 col-md-offset-4 team-image">
+				<img src="" alt="image"/>
+			</div>
+			<div class="col-xs-8 col-sm-6">
+				<p class="team-name text-left">
+					MOHIT SINGLA
+				</p>
+				<p class="team-designation text-left">
+					Co-Founder
+				</p>
+				<p class="team-description text-left text-justify">
+					Possessing an obsession for technology, he is a guy who is a Techie with an experience of 5+ years with some of the renowned multinationals.
+					He is our Tech Guru mainly concerned with technologies used and to be acquired for a better future so that we can become the best.
+				</p>
+			</div>
 		</div>
-	</div>
-	<div class="row team-members">
-		<div class="col-xs-4 col-sm-3 col-md-2 team-image">
-			<img src="" alt="image"/>
+		<div class="row team-members">
+			<div class="col-xs-4 col-sm-3 col-md-2 team-image">
+				<img src="" alt="image"/>
+			</div>
+			<div class="col-xs-8 col-sm-6">
+				<p class="team-name text-left">
+					ANKIT BANSAL
+				</p>
+				<p class="team-designation text-left">
+					Co-Founder
+				</p>
+				<p class="team-description text-left text-justify">
+					Public opinions, individual reactions &amp; feedbacks, these are the only things that matter to him.
+					He is a guy that analyzes the responses about Le Partycious and works for making the product better keeping an eye on the rapidly changing market trends.
+				</p>
+			</div>
 		</div>
-		<div class="col-xs-8 col-sm-6">
-			<p class="team-name text-left">LOKPRIYA KALRA</p>
-			<p class="team-designation text-left">Co-Founder</p>
-			<p class="team-description text-left text-justify">Coming all the way from Bikaner, Lokpriya has skills for managing an event efficiently
-				and successfully. Being an engineer, his tech brain helps to bring innovation in event management, hence redefining the term in a positive way. </p>
-		</div>
-	</div>
-</section>
+	</section>
 </div>
