--- a/app/views/cover/cover.html
+++ b/app/views/cover/cover.html
@@ -1,4 +1,4 @@
-<div id="coverPage" class="" style="background-image: url({{vm.coverUrl}})">
+<div id="coverPage" style="background-image: url({{vm.coverUrl}})">
 	<div class="content-wrapper">
 		<div class="container">
 			<div class="main-content text-center vertical-center">
@@ -20,14 +20,14 @@
 						<form action="" autocomplete="off" class="home-page-form">
 							<div class="col-xs-12 col-sm-8 col-sm-offset-1 search-input-box form-group">
 								<div class="row">
-									<input id="searchedText" type="text" placeholder="Simply type the name" class="form-control input-lg no-border-top-right-radius no-border-bottom-right-radius home-search-box" ng-model="vm.searchData">
+									<input id="searchedText" type="text" placeholder="Type vendor name or click Search All" class="form-control input-lg no-border-top-right-radius no-border-bottom-right-radius home-search-box" ng-model="vm.searchData">
 									</input>
 								</div>
 							</div>
 
 							<div class="col-xs-12 col-sm-2 search-button form-group">
 								<div class="row">
-									<button class="btn btn-lg btn-default home-search-btn no-border-bottom-left-radius no-border-top-left-radius" type="button" ng-click="vm.clicked();">SEARCH</button>	
+									<button class="btn btn-lg btn-default home-search-btn no-border-bottom-left-radius no-border-top-left-radius" type="button" ng-click="vm.clicked();">SEARCH ALL</button>	
 								</div>
 							</div>
 
