--- a/app/views/faq/faq.html
+++ b/app/views/faq/faq.html
@@ -8,43 +8,28 @@
 	<h2 class="theme-color">FAQs</h2>
 	<div class="row">
 	<div class="col-xs-12">	
-	<p class="theme-color text-left faq-question-text">Why LePartycious?</p>
+	<p class="theme-color text-left faq-question-text">why should i look for event vendors online?</p>
 	<p class="text-left faq-answer-text text-justify">
-		Le Partycious was established in October, 2015 with a single motto of
-		bringing smiles on the faces of people. At Le Partycious, we are focused
-		on providing Hospitality and Event services with the highest level of customer
-		satisfaction - we will do everything we can to meet your expectations.
-		With a variety of offerings to choose from, we're sure you will be happy working with us.
+		Today everyone is busy with their regular activities/work. So organising an event, lets say from daughter's birthday party to son's marriage, from parent's anniversary party to grandparent's retirement bash, it is not possible to meet every vendor and choose what is best. So Le Partycious provides you an online platform to choose from numerous listed vendors whichever suits you the best according to your budget and requirement.
 	</p>
 	</div>
 	<div class="col-xs-12">	
-	<p class="theme-color text-left faq-question-text">Why LePartycious?</p>
+	<p class="theme-color text-left faq-question-text">Can i book the vendor online from Le Partycious website?</p>
 	<p class="text-left faq-answer-text text-justify">
-		Le Partycious was established in October, 2015 with a single motto of
-		bringing smiles on the faces of people. At Le Partycious, we are focused
-		on providing Hospitality and Event services with the highest level of customer
-		satisfaction - we will do everything we can to meet your expectations.
-		With a variety of offerings to choose from, we're sure you will be happy working with us.
+		Currently Le Partycious is focusing on providing the maximum relevant information for each vendor listed, so that the information proves to be a choosing factor for any user.
+For now, LePartycious does not give the facility to book your vendor online, but based on your feedback and suggestions we can always work towards providing this facility.
 	</p>
 	</div>
 	<div class="col-xs-12">	
-	<p class="theme-color text-left faq-question-text">Why LePartycious?</p>
+	<p class="theme-color text-left faq-question-text">Can LePartycious organise my event?</p>
 	<p class="text-left faq-answer-text text-justify">
-		Le Partycious was established in October, 2015 with a single motto of
-		bringing smiles on the faces of people. At Le Partycious, we are focused
-		on providing Hospitality and Event services with the highest level of customer
-		satisfaction - we will do everything we can to meet your expectations.
-		With a variety of offerings to choose from, we're sure you will be happy working with us.
+		Yes, Le Partycious have its separate highly skilled event Management team, which organizes and manages your event to make sure that you enjoy every single bit of your event without bothering about anything. So you just have to call us or drop a mail give and we will be there for you in no time.
 	</p>
 	</div>
 	<div class="col-xs-12">	
-	<p class="theme-color text-left faq-question-text">Why LePartycious?</p>
+	<p class="theme-color text-left faq-question-text">I am a vendor and i want to get myself registered on Le Partycious. How can i do so?</p>
 	<p class="text-left faq-answer-text text-justify">
-		Le Partycious was established in October, 2015 with a single motto of
-		bringing smiles on the faces of people. At Le Partycious, we are focused
-		on providing Hospitality and Event services with the highest level of customer
-		satisfaction - we will do everything we can to meet your expectations.
-		With a variety of offerings to choose from, we're sure you will be happy working with us.
+		Just send a mail to us @ lepartycious@gmail.com with your telephone number and address in mail body and in no time we will be there for you.
 	</p>
 	</div>
 	</div>
