--- a/app/views/gallery/gallery.html
+++ b/app/views/gallery/gallery.html
@@ -22,7 +22,9 @@
 				<img src="/images/lp_theme_symbol.png" class="img-responsive"/>
 			</div>
 			<div class="gap20 col-xs-12"></div>
-			<div class="col-xs-12 gallery-venuename">at <span class="gallery-venue-name">{{vm.name}}</span></div>
+			<div class="col-xs-12 gallery-venuename"><span class="gallery-venue-name">{{vm.name}}, {{vm.city}}<br/>
+				{{vm.category}}, {{vm.state}}
+			</span></div>
 			<div class="gap20 col-xs-12"></div>
 			<div class="col-xs-12">
 				<ul class="gallery-helptext-container">
