--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -16,11 +16,14 @@
 <section class="container text-center">
 	<h2 class="theme-color">WELCOME TO LE PARTYCIOUS</h2>
 	<p>
-		Le Partycious was established in October, 2015 with a single motto of
-		bringing smiles on the faces of people. At Le Partycious, we are focused
-		on providing Hospitality and Event services with the highest level of customer
-		satisfaction - we will do everything we can to meet your expectations.
-		With a variety of offerings to choose from, we're sure you will be happy working with us.
+		Established in October 2015, Le Partycious is an online platform for organising events which provides you with the relevant
+
+			information regarding different venues,caterers,photographers and decorators. Its all about bringing all the vendors under
+
+			one roof so that they coordinate well and work towards a success story of  an event.
+			So precisely we are here to make your work convenient and hassel free by helping you choose from the diversified options
+
+			available, that fits in your pocket.
 	</p>
 </section>
 <!-- Services section starts -->
