--- a/app/styles/data.css
+++ b/app/styles/data.css
@@ -136,3 +136,14 @@
 	border: 2px solid #656565;
 	color: #ffffff;
 }
+
+.no-records-found{
+	height: inherit;
+	display: table;
+	text-align: center;
+}
+
+.no-records-found > div{
+	display: table-cell;
+	vertical-align: middle;
+}
