--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -1,6 +1,6 @@
 
 <div class='row data-list'>
-	<div class='col-xs-12 col-sm-3'>
+	<div class='col-xs-12 col-sm-3' ng-if="vm.resultList.length > 0">
 		<div class='col-xs-12'>
 			<h4 class='theme-color'>FILTERS</h4>
 			<div class="filters">
@@ -10,14 +10,16 @@
 	</div>
 	<!-- Adding the list section -->
 	
-	<div class='col-xs-12 col-sm-9 bg-grey'>
+	<div class='col-xs-12 col-sm-9 bg-grey' ng-if="vm.resultList.length > 0">
 			<div class='col-xs-12'>
 				<!--
 				<div class='col-xs-12'>
 									<div class='col-xs-12'>-->
 				
-						<h2 ng-if="vm.resultList.length > 0" class="h3"> Showing <div class="results-number">{{vm.setFromRecord}}-{{vm.setToRecord}} of {{vm.totalRecords}} records</div></h2>
-						<h2 ng-if="vm.resultList.length == 0">No Records Found!</h2>
+						<h2 class="h3"> Showing <div class="results-number">{{vm.setFromRecord}}-{{vm.setToRecord}} of {{vm.totalRecords}} records</div></h2>
+						
+						
+						
 						<div class="gap20"></div>
 					<!--
 					</div>
@@ -25,6 +27,7 @@
 									</div>-->
 					
 			</div>
+			
 	
 		<div dir-paginate="result in vm.resultList | itemsPerPage : pageSize" current-page="currentPage" pagination-id="dataPagination" total-items="vm.totalRecords" class='col-md-6 data-page-record'>
 					
@@ -48,9 +51,20 @@
 		</div>
 
 	</div>
+	
+	<!-- For Handling No Record Found Page -->
+			<div class="no-records-found col-xs-12" ng-if="vm.resultList.length == 0">
+							<div>
+								<h2>No Results Found!!</h2>
+								<img src="/images/no_content-found_image.png" height="250px;"/>
+								
+								<h4>Please try something else</h4>
+								<a href="/">Back to Home</a>
+							</div>
+						</div>
 </div>
 
-<dir-pagination-controls boundry-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="views/templates/dirPagination.tpl.html" pagination-id="dataPagination"></dir-pagination-controls>
+<dir-pagination-controls boundry-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="views/templates/dirPagination.tpl.html" pagination-id="dataPagination" ng-if="vm.resultList.length > 0"></dir-pagination-controls>
 
 
 
