--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -1,12 +1,14 @@
 <nav id="navbar" class="navbar navbar-fixed-top navbar-default navbar-inverse">
 	<div class="container-fluid">
 	<div class="navbar-header">
+		<!--
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			</button>
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					</button>-->
+		
 			<a class="navbar-brand" href="/">
 				<img src="/images/lp_logo.png" height="60px;" alt="logo-image"></a>
 				
@@ -22,14 +24,14 @@
 				
 				</div><!-- Collect the nav links, forms, and other content for toggling -->
 				
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<!--
+				<!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					
 					<ul class="nav navbar-nav">
 											<li class="active h3"><a href="#"></a></li>
-											</ul>-->
+											</ul>
 					
 						<ul class="nav navbar-nav navbar-right lp-header-navbar-nav">
 							<li class="city-select"></li>
-							<!--<li><a class="" href="">DEALS</a></li>-->
+							<li><a class="" href="">DEALS</a></li>
 							<li><a>SIGN IN</a></li>
-							</ul></div>
+						</ul></div>-->
