--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -42,7 +42,7 @@
 		<h2 class="theme-color">OUR TEAM</h2>
 		<div class="row team-members">
 			<div class="col-xs-4 col-sm-3 col-md-2 team-image">
-				<img src="" alt="image"/>
+				<img src="/images/blank_frame.jpg" alt="image"/>
 			</div>
 			<div class="col-xs-8 col-sm-6">
 				<p class="team-name text-left">
@@ -59,7 +59,7 @@
 		</div>
 		<div class="row team-members">
 			<div class="col-xs-4 col-sm-3 col-md-2 col-sm-offset-3 col-md-offset-4 team-image">
-				<img src="" alt="image"/>
+				<img src="/images/blank_frame.jpg" alt="image"/>
 			</div>
 			<div class="col-xs-8 col-sm-6">
 				<p class="team-name text-left">
@@ -76,7 +76,7 @@
 		</div>
 		<div class="row team-members">
 			<div class="col-xs-4 col-sm-3 col-md-2 team-image">
-				<img src="" alt="image"/>
+				<img src="/images/blank_frame.jpg" alt="image"/>
 			</div>
 			<div class="col-xs-8 col-sm-6">
 				<p class="team-name text-left">
