--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -5,7 +5,7 @@
       <span class="logo"><img class="img" src="/images/lp_main_logo.png"/></span>
       </a>
       <div class="h3">Welcome to Le Partycious</div>
-      <p class="info">We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.We provide event and hospitality services with a single motto of bringing smiles on the faces of people.</p>
+      <p class="info">We are an online platform for providing information about various vendors- venues, caterers, photographers, decorators who are capable of making your party a huge success. So if you want to host a party, just let us know how you want your party to be and we will provide you vendors that suits your requirement and budget.</p>
       <p class="connect">Connect With Us</p>
       <ul class="social">
          <li>
