--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -150,7 +150,11 @@
 					</div>
 					<div class="pamphlet-body recommended-pamphlet-desc">
 						<div class="pamphlet-title col-xs-12 text-center ng-binding lineHeight30">
-							{{reccomendation.name}}
+							<div class="row">
+									<div class="col-xs-12 pamphlet-title-desc"><div style="width:inherit;">{{reccomendation.name}}<span class="pamphlet-title-city">, Chandigarh</span></div></div>
+									<!--<div class="col-xs-4 text-left pamphlet-title-price border-left-1px"><div>Starts from</div><span class="fa fa-fw fa-inr theme-color"></span><span class="pamphlet-title-rate theme-color">1,00,000</span></div>-->
+								</div>
+							<!--{{reccomendation.name}}-->
 						</div>
 					</div> <div class="pamphlet-footer"></div> </a>
 				</div>
