--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -36,7 +36,9 @@
 						<a href="" ng-click="vm.fetchDetails(result.name);" class="pamphlet-anchor">
 						<div class="pamphlet-container">
 							<div class="pamphlet-header">
+									<div class="featured-ribbon"><span class="featured-ribbon-text">LE PARTYCIOUS</span></div>
 								<img src="{{vm.getImageURL(result.mainImagerURL)}}" alt='cover-photo' class="vertical-center"></img>
+
 							</div>
 							<div class="pamphlet-body">
 								<div class="pamphlet-title col-xs-12 text-center">
