--- a/app/views/about/about.html
+++ b/app/views/about/about.html
@@ -11,7 +11,7 @@
 		<p class="text-left">
 			Do you want to organize a surprise party on your anniversary but unable to do so because of your busy office hours?<br/>
 			Do you wish to plan a birthday party for your kid but got confused whether it will lie in your budget or not?<br/>
-			Want to enjoy your son's marriage without having any botheration to handle the event/guests?<br/>
+			Want to enjoy your son's marriage without having any botheration to handle the event/guests yourself?<br/>
 		</p>
 		<p class="text-left">
 			Planning for a party? Then you have come to the right place.
@@ -29,12 +29,12 @@
 		<p class="text-left">
 			Established in October 2015, Le Partycious is an online platform for organising events.Which provides you with the relevant
 
-			information regarding different venues,caterers,photographers and decorators. Its all about bringing all the vendors under
+			information regarding different venues, caterers, photographers, decorators and much more. Its all about bringing all the vendors under
 
 			one roof so that they coordinate well and work towards a success story of  an event.
 			So precisely we are here to make your work convenient and hassel free by helping you choose from the diversified options
 
-			available, that fits in your pocket.
+			available, that fits in your budget too.
 		</p>
 	</section>
 	<!-- OUR TEAM section starts -->
@@ -52,9 +52,10 @@
 					Co-Founder
 				</p>
 				<p class="team-description text-left text-justify">
-					He is a guy who is passionate about innovation and his diverse event management skills makes him a great planner.
-					Coming from the streets of Bikaner, he is an engineer-cum-eventManager by education and also a  deep thinker in every aspect of life.
-					He is our Event Manager mainly concerned with marketing and business development for Le Partycious.	</p>
+					He is a guy who is passionate about innovation and his diverse event management skills makes him a great event planner.
+					Coming from the streets of Bikaner, he holds a bachelors degree in Technology and a Diploma in Event Management.
+					He heads our Event Management team at Le Partycious and knows how to make every event a great success story. 
+					He is our Event Manager mainly concerned with managing and organising events and marketing for Le Partycious.	</p>
 			</div>
 		</div>
 		<div class="row team-members">
