--- a/app/views/faq/faq.html
+++ b/app/views/faq/faq.html
@@ -17,19 +17,19 @@
 	<p class="theme-color text-left faq-question-text">Can i book the vendor online from Le Partycious website?</p>
 	<p class="text-left faq-answer-text text-justify">
 		Currently Le Partycious is focusing on providing the maximum relevant information for each vendor listed, so that the information proves to be a choosing factor for any user.
-For now, LePartycious does not give the facility to book your vendor online, but based on your feedback and suggestions we can always work towards providing this facility.
+For now, LePartycious does not give the facility to book your vendor online, but based on your feedback and suggestions we can always work towards providing this service.
 	</p>
 	</div>
 	<div class="col-xs-12">	
 	<p class="theme-color text-left faq-question-text">Can LePartycious organise my event?</p>
 	<p class="text-left faq-answer-text text-justify">
-		Yes, Le Partycious have its separate highly skilled event Management team, which organizes and manages your event to make sure that you enjoy every single bit of your event without bothering about anything. So you just have to call us or drop a mail give and we will be there for you in no time.
+		Yes, Le Partycious have its separate highly skilled Event Management team, which organizes and manages your event to make sure that you enjoy every single bit of your event without bothering about anything else. So you just have to call us or drop a mail and we will be there for you in no time.
 	</p>
 	</div>
 	<div class="col-xs-12">	
 	<p class="theme-color text-left faq-question-text">I am a vendor and i want to get myself registered on Le Partycious. How can i do so?</p>
 	<p class="text-left faq-answer-text text-justify">
-		Just send a mail to us @ lepartycious@gmail.com with your telephone number and address in mail body and in no time we will be there for you.
+		Just send a mail to us @ lepartycious@gmail.com with your telephone number and address in mail body and within no time we will reach you and get you registered. The registration process is quite simple and absolutely free of cost.
 	</p>
 	</div>
 	</div>
