--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -47,18 +47,18 @@
 					</div>
 					<div class="pamphlet-body">
 						<div class="row">
-							<div class="col-xs-6 col-md-4 col-lg-3">
-						<a href="/images/caterer_cover.jpg" target="_self" class="boxer" title="Caption One" data-gallery="gallery"> 
-							<img src="/images/caterer_cover.jpg" alt="Thumbnail One" class="img-responsive"/> 
+							<div class="col-xs-6 col-md-4 col-lg-3" ng-repeat="menuImage in vm.detailedData.menuImages">
+						<a href="{{vm.getImageURL(menuImage.imageURL)}}" target="_self" class="boxer" title="Caption One" data-gallery="gallery"> 
+							<img src="{{vm.getImageURL(menuImage.imageURL)}}" alt="Thumbnail One" class="img-responsive"/> 
 							</a>
 							</div>
-							<div class="col-xs-6 col-md-4 col-lg-3">
+							<!-- <div class="col-xs-6 col-md-4 col-lg-3">
 						<a href="/images/about_us_cover.jpg" target="_self" class="boxer" title="Caption Two" data-gallery="gallery"> 
 							<img src="/images/about_us_cover.jpg" alt="Thumbnail Two" class="img-responsive"/> 
 							</a>
 							</div>
 							
-							</div>
+							</div> -->
 					</div>
 				</div>
 				<!--Adding Amenities and Services-->
