--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -61,6 +61,7 @@
 							</div> -->
 					</div>
 				</div>
+			</div>
 				<!--Adding Amenities and Services-->
 				<div class="pamphlet-container details-pamphlet amenities-services">
 					<div class="pamphlet-header">
