--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="pamphlet-body">
 						<div class="row">
-							<div class="col-xs-6 col-md-4 col-lg-3" ng-repeat="menuImage in vm.detailedData.menuImages">
+							<div class="col-xs-6 col-md-4 col-lg-3" ng-repeat="menuImage in vm.detailedData.menuImages" on-last-repeat-element on-finish-callback="vm.loadBoxer()">
 						<a href="{{vm.getImageURL(menuImage.imageURL)}}" target="_self" class="boxer" title="Caption One" data-gallery="gallery"> 
 							<img src="{{vm.getImageURL(menuImage.imageURL)}}" alt="Thumbnail One" class="img-responsive"/> 
 							</a>
