--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -43,8 +43,8 @@
 							<div class="pamphlet-body">
 								<div class="pamphlet-title col-xs-12 text-center">
 									<div class="row">
-									<div class="col-xs-8 text-left pamphlet-title-desc"><div>{{result.name}}</div><span class="pamphlet-title-city">Chandigarh</span></div>
-									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px"><div>Starts from</div><span class="fa fa-fw fa-inr theme-color"></span><span class="pamphlet-title-rate theme-color">1,00,000</span></div>
+									<div class="col-xs-8 text-left pamphlet-title-desc"><div>{{result.name}}</div><span class="pamphlet-title-city">{{result.locality}}</span></div>
+									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px"><div>Starts from</div><span class="fa fa-fw fa-inr theme-color"></span><span class="pamphlet-title-rate theme-color">{{result.startingPrice}}</span></div>
 								</div>
 								</div>
 							</div>
